Add FastAPI overview section to Lab 1 notebook

--- a/ai-web/labs/Lab01_FastAPI_CRA_and_Git.ipynb
+++ b/ai-web/labs/Lab01_FastAPI_CRA_and_Git.ipynb
@@ -35,6 +35,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "851ef7a2",
+   "metadata": {},
+   "source": [
+    "### FastAPI Overview\n",
+    "\n",
+    "#### What is FastAPI?\n",
+    "FastAPI is a modern Python web framework for building APIs. It leverages Python type hints to automatically validate data, generate interactive OpenAPI documentation, and provide excellent editor support. It is built atop Starlette and Pydantic, so it inherits high performance, async-first request handling, and clear data modeling.\n",
+    "\n",
+    "#### Why FastAPI for this course?\n",
+    "- **Speed and productivity:** You can scaffold endpoints quickly while FastAPI handles serialization, validation, and documentation.\n",
+    "- **Async support:** Built-in `async`/`await` support makes it straightforward to create responsive services that can call other APIs or databases without blocking.\n",
+    "- **Type-driven clarity:** Using type hints keeps request and response models explicit, which is crucial when collaborating with front-end code and AI agents.\n",
+    "These traits make FastAPI a great foundation for the full-stack and AI-driven workflows explored throughout the labs.\n",
+    "\n",
+    "#### How you’ll use FastAPI in Lab 01\n",
+    "In this lab you will:\n",
+    "1. Scaffold a simple FastAPI project and review its file structure.\n",
+    "2. Add a few routes and run the API locally to see the interactive docs.\n",
+    "3. Configure development CORS settings so the React client can reach your API.\n",
+    "4. Connect the FastAPI service to the provided React front end and verify they communicate.\n",
+    "These steps lay the groundwork for the more advanced AI integrations that follow in later labs.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "941c4bef",
    "metadata": {},
    "source": [
