Switch labs to Vite and google-genai

--- a/ai-web/labs/Lab03_Gemini_Proxy_Chat.ipynb
+++ b/ai-web/labs/Lab03_Gemini_Proxy_Chat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33eeeba7",
+   "id": "017bf5e3",
    "metadata": {},
    "source": [
     "# Lab 03 · Gemini Proxy Chat\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47de6f88",
+   "id": "cfec0a65",
    "metadata": {},
    "source": [
     "## Objectives\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4a0618",
+   "id": "598f0d61",
    "metadata": {},
    "source": [
     "## What will be learned\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "373bf681",
+   "id": "5059f46d",
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
@@ -43,13 +43,13 @@
     "```bash\n",
     "cd ai-web/backend\n",
     ". .venv/bin/activate\n",
-    "pip install google-generativeai\n",
+    "pip install google-genai\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "07a89a5a",
+   "id": "5db9946c",
    "metadata": {},
    "source": [
     "## Step-by-step tasks\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e02eb74",
+   "id": "a7bc0fed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,18 +68,20 @@
     "module = Path(\"ai-web/backend/app/llm.py\")\n",
     "module.parent.mkdir(parents=True, exist_ok=True)\n",
     "module.write_text('''import os\n",
-    "from typing import List, Dict\n",
+    "from typing import Dict, List, Any\n",
     "\n",
-    "import google.generativeai as genai\n",
+    "from google import genai\n",
     "\n",
     "\n",
-    "def chat(messages: List[Dict[str, str]]) -> str:\n",
+    "def chat(messages: List[Dict[str, Any]]) -> str:\n",
     "  api_key = os.environ.get('GEMINI_API_KEY', '')\n",
     "  if not api_key:\n",
     "    raise RuntimeError('A backend API key is required.')\n",
-    "  genai.configure(api_key=api_key)\n",
-    "  model = genai.GenerativeModel('gemini-1.5-flash')\n",
-    "  response = model.generate_content(messages)\n",
+    "  client = genai.Client(api_key=api_key)\n",
+    "  response = client.models.generate_content(\n",
+    "      model=\"gemini-1.5-flash\",\n",
+    "      contents=messages,\n",
+    "  )\n",
     "  return response.text\n",
     "''')\n",
     "print(\"Gemini helper was written.\")"
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "210a4d10",
+   "id": "c6298a58",
    "metadata": {},
    "source": [
     "### Step 2: FastAPI route update\n",
@@ -97,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "550f0ebb",
+   "id": "fac05130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,22 +139,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd5dc6d4",
+   "id": "3524459f",
    "metadata": {},
    "source": [
     "### Step 3: React chat surface\n",
-    "A lightweight chat component is appended to App.js so the proxy is exercised."
+    "A lightweight chat component is appended to App.jsx so the proxy is exercised."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168ba811",
+   "id": "fb9ccfe8",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "app_js = Path(\"ai-web/frontend/src/App.js\")\n",
+    "app_js = Path(\"ai-web/frontend/src/App.jsx\")\n",
     "app_js.write_text('''import React, { useState } from 'react';\n",
     "import { post } from './lib/api';\n",
     "import { withRetry } from './lib/retry';\n",
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2c989a1",
+   "id": "361425b3",
    "metadata": {},
    "source": [
     "## Validation / acceptance checks\n",
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9be9d3cf",
+   "id": "94cc9759",
    "metadata": {},
    "source": [
     "## Homework / extensions\n",
