--- a/ai-web/labs/Lab06_Embeddings_and_FAISS.ipynb
+++ b/ai-web/labs/Lab06_Embeddings_and_FAISS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eafe495a",
+   "id": "23498c17",
    "metadata": {},
    "source": [
     "# Lab 06 · Embeddings and FAISS\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfea26d0",
+   "id": "42a1e166",
    "metadata": {},
    "source": [
     "## Objectives\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0390110",
+   "id": "3451f2b6",
    "metadata": {},
    "source": [
     "## What will be learned\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eb68ac3",
+   "id": "a5d6bc2d",
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
@@ -43,13 +43,13 @@
     "```bash\n",
     "cd ai-web/backend\n",
     ". .venv/bin/activate\n",
-    "pip install faiss-cpu google-generativeai numpy\n",
+    "pip install faiss-cpu google-genai numpy\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b6f4be53",
+   "id": "d7da0e81",
    "metadata": {},
    "source": [
     "## Step-by-step tasks\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e83f8b5",
+   "id": "25f9d48c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
     "from pathlib import Path\n",
     "from typing import List, Tuple\n",
     "\n",
-    "import google.generativeai as genai\n",
+    "from google import genai\n",
     "import numpy as np\n",
     "import faiss\n",
     "\n",
@@ -82,18 +82,31 @@
     "META_FILE = DATA_DIR / \"metadata.json\"\n",
     "\n",
     "\n",
+    "def _client() -> genai.Client:\n",
+    "  api_key = os.environ.get('GEMINI_API_KEY', '')\n",
+    "  if not api_key:\n",
+    "    raise RuntimeError('A backend API key is required for embeddings.')\n",
+    "  return genai.Client(api_key=api_key)\n",
+    "\n",
+    "\n",
+    "def _text_content(text: str) -> dict:\n",
+    "  return {\"parts\": [{\"text\": text}]}\n",
+    "\n",
+    "\n",
     "def chunk_text(text: str, size: int = 400) -> List[str]:\n",
     "  return [text[i:i + size] for i in range(0, len(text), size) if text[i:i + size].strip()]\n",
     "\n",
     "\n",
     "def embed_chunks(chunks: List[str]) -> np.ndarray:\n",
-    "  api_key = os.environ.get('GEMINI_API_KEY', '')\n",
-    "  if not api_key:\n",
-    "    raise RuntimeError('A backend API key is required for embeddings.')\n",
-    "  genai.configure(api_key=api_key)\n",
-    "  model = genai.EmbeddingModel(model_name='text-embedding-004')\n",
-    "  vectors = model.embed_content([{ \"title\": f\"Chunk {idx}\", \"content\": chunk } for idx, chunk in enumerate(chunks)])\n",
-    "  return np.array([item.values for item in vectors], dtype=np.float32)\n",
+    "  client = _client()\n",
+    "  response = client.models.embed_content(\n",
+    "      model='text-embedding-004',\n",
+    "      contents=[_text_content(chunk) for chunk in chunks],\n",
+    "  )\n",
+    "  embeddings = response.embeddings or []\n",
+    "  if not embeddings:\n",
+    "    raise RuntimeError('No embeddings were returned from the Gemini API.')\n",
+    "  return np.array([item.values for item in embeddings], dtype=np.float32)\n",
     "\n",
     "\n",
     "def save_index(chunks: List[str], vectors: np.ndarray) -> None:\n",
@@ -122,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af0c4c5",
+   "id": "849f5f29",
    "metadata": {},
    "source": [
     "### Step 2: Index builder cell\n",
@@ -132,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d51ca9ab",
+   "id": "54f14a41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7f13eeb",
+   "id": "62b1be89",
    "metadata": {},
    "source": [
     "### Step 3: Search endpoint\n",
@@ -164,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dafa4a26",
+   "id": "a2ea384e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49212d07",
+   "id": "b44c0e0d",
    "metadata": {},
    "source": [
     "## Validation / acceptance checks\n",
@@ -205,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28f7d673",
+   "id": "4fbe9259",
    "metadata": {},
    "source": [
     "## Homework / extensions\n",
