--- a/ai-web/labs/Lab07_RAG_with_Citations.ipynb
+++ b/ai-web/labs/Lab07_RAG_with_Citations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae2f02c9",
+   "id": "f0441c61",
    "metadata": {},
    "source": [
     "# Lab 07 · RAG with Citations\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f41ba182",
+   "id": "b68688af",
    "metadata": {},
    "source": [
     "## Objectives\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8345e75c",
+   "id": "a4a0b43b",
    "metadata": {},
    "source": [
     "## What will be learned\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38b38581",
+   "id": "fa8be19a",
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
@@ -43,13 +43,13 @@
     "```bash\n",
     "cd ai-web/backend\n",
     ". .venv/bin/activate\n",
-    "pip install google-generativeai\n",
+    "pip install google-genai\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5781869",
+   "id": "cbbe60d5",
    "metadata": {},
    "source": [
     "## Step-by-step tasks\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "973dad3a",
+   "id": "ba2f28b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879149c5",
+   "id": "854f0381",
    "metadata": {},
    "source": [
     "### Step 2: Endpoint exposure\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e0aacec",
+   "id": "70160a31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "720687ad",
+   "id": "b9b388c7",
    "metadata": {},
    "source": [
     "## Validation / acceptance checks\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "857f2b98",
+   "id": "6e287521",
    "metadata": {},
    "source": [
     "## Homework / extensions\n",
