--- a/ai-web/labs/Lab08_TensorFlowJS_Browser_Inference.ipynb
+++ b/ai-web/labs/Lab08_TensorFlowJS_Browser_Inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6722c9de",
+   "id": "fe2928d5",
    "metadata": {},
    "source": [
     "# Lab 08 · TensorFlow.js Browser Inference\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0148de7a",
+   "id": "51e4e9ec",
    "metadata": {},
    "source": [
     "## Objectives\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "179764da",
+   "id": "f1674f6b",
    "metadata": {},
    "source": [
     "## What will be learned\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f936c1",
+   "id": "2c52c26b",
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "123c3413",
+   "id": "b6b6a3d6",
    "metadata": {},
    "source": [
     "## Step-by-step tasks\n",
@@ -59,12 +59,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad2bb2e4",
+   "id": "73905c64",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "app_js = Path(\"ai-web/frontend/src/App.js\")\n",
+    "app_js = Path(\"ai-web/frontend/src/App.jsx\")\n",
     "app_js.write_text('''import React, { useEffect, useRef, useState } from 'react';\n",
     "import * as cocoSsd from '@tensorflow-models/coco-ssd';\n",
     "import '@tensorflow/tfjs';\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a60d5bf",
+   "id": "ac34d6fc",
    "metadata": {},
    "source": [
     "## Validation / acceptance checks\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a46dbef",
+   "id": "7153cc24",
    "metadata": {},
    "source": [
     "## Homework / extensions\n",
