--- a/ai-web/labs/Lab10_Evaluation_Latency_Cache.ipynb
+++ b/ai-web/labs/Lab10_Evaluation_Latency_Cache.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bf73da21",
+   "id": "58f3af1c",
    "metadata": {},
    "source": [
     "# Lab 10 · Evaluation, Latency, and Cache\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2d9c448",
+   "id": "4ddcd87f",
    "metadata": {},
    "source": [
     "## Objectives\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f1a900f",
+   "id": "aa37ba39",
    "metadata": {},
    "source": [
     "## What will be learned\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c90538b0",
+   "id": "e717ec4b",
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
@@ -43,13 +43,13 @@
     "```bash\n",
     "cd ai-web/backend\n",
     ". .venv/bin/activate\n",
-    "pip install google-generativeai\n",
+    "pip install google-genai\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b1b3a65",
+   "id": "1592d318",
    "metadata": {},
    "source": [
     "## Step-by-step tasks\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88cdfeee",
+   "id": "ca8263a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "939f65f1",
+   "id": "a700bdc7",
    "metadata": {},
    "source": [
     "### Step 2: Metrics helper\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "548cd4a6",
+   "id": "048ef914",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fca8da2",
+   "id": "9f273dde",
    "metadata": {},
    "source": [
     "### Step 3: Cache-enabled endpoint\n",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb6b7a03",
+   "id": "ad8cc719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bb4d25c",
+   "id": "3c24aa74",
    "metadata": {},
    "source": [
     "## Validation / acceptance checks\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10b8ecfd",
+   "id": "518080e1",
    "metadata": {},
    "source": [
     "## Homework / extensions\n",
