--- a/ai-web/labs/Lab12_Deployment_and_Docker.ipynb
+++ b/ai-web/labs/Lab12_Deployment_and_Docker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5814107b",
+   "id": "008d9f0e",
    "metadata": {},
    "source": [
     "# Lab 12 · Deployment and Docker\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "863f7d58",
+   "id": "9a8754ac",
    "metadata": {},
    "source": [
     "## Objectives\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4da72b7",
+   "id": "f80e0866",
    "metadata": {},
    "source": [
     "## What will be learned\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f15c6a",
+   "id": "d35523dc",
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0dd9505",
+   "id": "e64d3630",
    "metadata": {},
    "source": [
     "## Step-by-step tasks\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80026770",
+   "id": "d707aff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "793c839e",
+   "id": "b959578d",
    "metadata": {},
    "source": [
     "### Step 2: Compose sketch\n",
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d54eb45e",
+   "id": "11282619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,16 +107,16 @@
     "  frontend:\n",
     "    build: ./frontend\n",
     "    ports:\n",
-    "      - \"3000:3000\"\n",
+    "      - \"5173:5173\"\n",
     "    environment:\n",
-    "      - REACT_APP_API_BASE=http://localhost:8000\n",
+    "      - VITE_API_BASE=http://localhost:8000\n",
     "''')\n",
     "print(\"Compose sketch was drafted.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a74f075",
+   "id": "5f1dc53f",
    "metadata": {},
    "source": [
     "### Step 3: Deployment checklist\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70cb67ea",
+   "id": "fcca6ed8",
    "metadata": {},
    "source": [
     "A deployment checklist is tracked:\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c61db12",
+   "id": "b82b2b57",
    "metadata": {},
    "source": [
     "## Validation / acceptance checks\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e83443c",
+   "id": "b294841d",
    "metadata": {},
    "source": [
     "## Homework / extensions\n",
