--- a/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
+++ b/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a0af8698",
+   "id": "c6402875",
    "metadata": {},
    "source": [
     "# Lab 02 · HTTP Forms and Retry\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f5996cd",
+   "id": "0f49bc88",
    "metadata": {},
    "source": [
     "## Objectives\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b95786a",
+   "id": "86bd98d1",
    "metadata": {},
    "source": [
     "## What will be learned\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4334fb15",
+   "id": "36018592",
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14db1484",
+   "id": "85d7ef5f",
    "metadata": {},
    "source": [
     "## Step-by-step tasks\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25f1e0b2",
+   "id": "530801d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,22 +84,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "518be421",
+   "id": "70dc57ad",
    "metadata": {},
    "source": [
     "### Step 2: Form integration\n",
-    "App.js is updated so the retry helper wraps the echo request and error states remain friendly."
+    "App.jsx is updated so the retry helper wraps the echo request and error states remain friendly."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61f4b6e",
+   "id": "59c4d585",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "app_js = Path(\"ai-web/frontend/src/App.js\")\n",
+    "app_js = Path(\"ai-web/frontend/src/App.jsx\")\n",
     "text = app_js.read_text()\n",
     "if \"withRetry\" not in text:\n",
     "    text = text.replace(\n",
@@ -118,12 +118,12 @@
     "        \"setError('A temporary issue was encountered. Please try again.');\",\n",
     "    )\n",
     "app_js.write_text(text)\n",
-    "print(\"App.js was adjusted for retry and friendly errors.\")"
+    "print(\"App.jsx was adjusted for retry and friendly errors.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cd67b660",
+   "id": "fa9a017e",
    "metadata": {},
    "source": [
     "## Validation / acceptance checks\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "637adf6b",
+   "id": "4c74384a",
    "metadata": {},
    "source": [
     "## Homework / extensions\n",
@@ -146,17 +146,7 @@
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "mitocluster",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.11.5"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
