Enhance Lab 01 prerequisites guidance

--- a/ai-web/labs/Lab01_FastAPI_CRA_and_Git.ipynb
+++ b/ai-web/labs/Lab01_FastAPI_CRA_and_Git.ipynb
@@ -5,7 +5,7 @@
    "id": "467f598d",
    "metadata": {},
    "source": [
-    "# Lab 01 · FastAPI, CRA, and Git\n",
+    "# Lab 01 \u00b7 FastAPI, CRA, and Git\n",
     "\n",
     "*This lab notebook provides guided steps. All commands are intended for local execution.*"
    ]
@@ -49,7 +49,7 @@
     "- **Type-driven clarity:** Using type hints keeps request and response models explicit, which is crucial when collaborating with front-end code and AI agents.\n",
     "These traits make FastAPI a great foundation for the full-stack and AI-driven workflows explored throughout the labs.\n",
     "\n",
-    "#### How you’ll use FastAPI in Lab 01\n",
+    "#### How you\u2019ll use FastAPI in Lab 01\n",
     "In this lab you will:\n",
     "1. Scaffold a simple FastAPI project and review its file structure.\n",
     "2. Add a few routes and run the API locally to see the interactive docs.\n",
@@ -64,22 +64,33 @@
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
-    "The following commands are intended for local execution.\n",
-    "\n",
+    "The following tools are needed for this lab. Install them locally and keep all project-specific environments inside this repository so nothing leaks into the rest of your system.\n\n",
+    "| Tool | Why we use it in this lab | Download or docs |\n",
+    "| --- | --- | --- |\n",
+    "| Python 3.10+ | Runs the FastAPI backend and virtual environment tooling. | [python.org/downloads](https://www.python.org/downloads/) |\n",
+    "| Node.js & npm | Provides the JavaScript runtime and package manager required by Create React App. | [nodejs.org](https://nodejs.org/) |\n",
+    "| Git | Tracks changes and enables pushing your work to GitHub. | [git-scm.com/downloads](https://git-scm.com/downloads) |\n",
+    "| Create React App (npx) | Bootstraps the React frontend scaffold used in the lab. | [create-react-app.dev](https://create-react-app.dev/docs/getting-started/) |\n",
+    "| FastAPI | Python web framework for building the backend API. | [fastapi.tiangolo.com](https://fastapi.tiangolo.com/) |\n",
+    "| Uvicorn | ASGI server that runs the FastAPI app locally. | [www.uvicorn.org](https://www.uvicorn.org/) |\n",
+    "| Pydantic | Validates request/response models in the FastAPI backend. | [docs.pydantic.dev](https://docs.pydantic.dev/) |\n",
+    "| python-dotenv | Loads environment variables from a `.env` file for local secrets management. | [pypi.org/project/python-dotenv](https://pypi.org/project/python-dotenv/) |\n",
+    "| google-generativeai | Client library for Google Generative AI integrations explored later in the course. | [pypi.org/project/google-generativeai](https://pypi.org/project/google-generativeai/) |\n",
+    "| faiss-cpu | Provides vector similarity search utilities used by the AI features. | [pypi.org/project/faiss-cpu](https://pypi.org/project/faiss-cpu/) |\n",
+    "| numpy | Supports numerical operations required by FAISS and data processing. | [numpy.org](https://numpy.org/install/) |\n\n",
+    "Before installing dependencies, change into `ai-web/backend`, create (if needed) and activate the `.venv` virtual environment there, and scaffold the React app inside `ai-web/frontend` so every dependency stays scoped to this project folder.\n\n",
     "```bash\n",
     "python --version\n",
     "node --version\n",
     "npm --version\n",
-    "git --version\n",
-    "\n",
+    "git --version\n\n",
     "# Backend environment preparation (local execution only)\n",
     "cd ai-web/backend\n",
     "python -m venv .venv\n",
     "# Windows: .venv\\Scripts\\activate\n",
     "# Unix/macOS:\n",
     ". .venv/bin/activate\n",
-    "pip install fastapi uvicorn[standard] pydantic python-dotenv google-generativeai faiss-cpu numpy\n",
-    "\n",
+    "pip install fastapi uvicorn[standard] pydantic python-dotenv google-generativeai faiss-cpu numpy\n\n",
     "# Frontend creation (Create React App; no Vite)\n",
     "cd ../../\n",
     "npx create-react-app frontend\n",
@@ -209,10 +220,10 @@
     "\n",
     "  return (\n",
     "    <main style={{ padding: 24 }}>\n",
-    "      <h1>Lab 1 — Echo demo</h1>\n",
+    "      <h1>Lab 1 \u2014 Echo demo</h1>\n",
     "      <input value={msg} onChange={(event) => setMsg(event.target.value)} />\n",
     "      <button onClick={handleSend} disabled={loading}>Send</button>\n",
-    "      {loading && <p>Loading…</p>}\n",
+    "      {loading && <p>Loading\u2026</p>}\n",
     "      {error && <p style={{ color: 'red' }}>{error}</p>}\n",
     "      <pre>{response}</pre>\n",
     "    </main>\n",
