--- a/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
+++ b/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
@@ -39,7 +39,23 @@
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
-    "The following commands are intended for local execution.\n",
+    "The following tools are needed for this lab. Install them locally and keep all project-specific environments inside this repository so nothing leaks into the rest of your system.\n",
+    "\n",
+    "| Tool | Why we use it in this lab | Download or docs |\n",
+    "| --- | --- | --- |\n",
+    "| Python 3.10+ | Runs the FastAPI backend and virtual environment tooling. | [python.org/downloads](https://www.python.org/downloads/) |\n",
+    "| Node.js & npm | Provides the JavaScript runtime and package manager required by Create React App. | [nodejs.org](https://nodejs.org/) |\n",
+    "| Git | Tracks changes and enables pushing your work to GitHub. | [git-scm.com/downloads](https://git-scm.com/downloads) |\n",
+    "| Create React App (npx) | Bootstraps the React frontend scaffold used in the lab. | [create-react-app.dev](https://create-react-app.dev/docs/getting-started/) |\n",
+    "| FastAPI | Python web framework for building the backend API. | [fastapi.tiangolo.com](https://fastapi.tiangolo.com/) |\n",
+    "| Uvicorn | ASGI server that runs the FastAPI app locally. | [www.uvicorn.org](https://www.uvicorn.org/) |\n",
+    "| Pydantic | Validates request/response models in the FastAPI backend. | [docs.pydantic.dev](https://docs.pydantic.dev/) |\n",
+    "| python-dotenv | Loads environment variables from a `.env` file for local secrets management. | [pypi.org/project/python-dotenv](https://pypi.org/project/python-dotenv/) |\n",
+    "| google-generativeai | Client library for Google Generative AI integrations explored later in the course. | [pypi.org/project/google-generativeai](https://pypi.org/project/google-generativeai/) |\n",
+    "| faiss-cpu | Provides vector similarity search utilities used by the AI features. | [pypi.org/project/faiss-cpu](https://pypi.org/project/faiss-cpu/) |\n",
+    "| numpy | Supports numerical operations required by FAISS and data processing. | [numpy.org](https://numpy.org/install/) |\n",
+    "\n",
+    "Before installing dependencies, change into `ai-web/backend`, create (if needed) and activate the `.venv` virtual environment there, and scaffold the React app inside `ai-web/frontend` so every dependency stays scoped to this project folder.\n",
     "\n",
     "```bash\n",
     "python --version\n",
@@ -53,11 +69,11 @@
     "# Windows: .venv\\Scripts\\activate\n",
     "# Unix/macOS:\n",
     ". .venv/bin/activate\n",
-    "pip install fastapi uvicorn[standard] pydantic python-dotenv google-genai faiss-cpu numpy\n",
+    "pip install fastapi uvicorn[standard] pydantic python-dotenv google-generativeai faiss-cpu numpy\n",
     "\n",
-    "# Frontend creation (Vite React template)\n",
+    "# Frontend creation (Create React App; no Vite)\n",
     "cd ../../\n",
-    "npm create vite@latest frontend -- --template react\n",
+    "npx create-react-app frontend\n",
     "cd frontend\n",
     "npm install\n",
     "```"
@@ -258,7 +274,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
