--- a/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
+++ b/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "05daf237",
+   "id": "3191ae5d",
    "metadata": {},
    "source": [
     "# Lab 01 · FastAPI, Vite, and Git\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94c27958",
+   "id": "79fa3288",
    "metadata": {},
    "source": [
     "## Objectives\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6950ab",
+   "id": "1a81d1e0",
    "metadata": {},
    "source": [
     "## What will be learned\n",
@@ -35,77 +35,66 @@
   },
   {
    "cell_type": "markdown",
-   "id": "423057b3",
+   "id": "6af0bd1f",
    "metadata": {},
    "source": [
     "## Prerequisites & install\n",
-    "The following tools are needed for this lab. Install them locally and keep all project-specific environments inside this repository so nothing leaks into the rest of your system.\n",
-    "\n",
-    "| Tool | Why we use it in this lab | Download or docs |\n",
-    "| --- | --- | --- |\n",
-    "| Python 3.10+ | Runs the FastAPI backend and virtual environment tooling. | [python.org/downloads](https://www.python.org/downloads/) |\n",
-    "| Node.js & npm | Provides the JavaScript runtime and package manager required by Create React App. | [nodejs.org](https://nodejs.org/) |\n",
-    "| Git | Tracks changes and enables pushing your work to GitHub. | [git-scm.com/downloads](https://git-scm.com/downloads) |\n",
-    "| Create React App (npx) | Bootstraps the React frontend scaffold used in the lab. | [create-react-app.dev](https://create-react-app.dev/docs/getting-started/) |\n",
-    "| FastAPI | Python web framework for building the backend API. | [fastapi.tiangolo.com](https://fastapi.tiangolo.com/) |\n",
-    "| Uvicorn | ASGI server that runs the FastAPI app locally. | [www.uvicorn.org](https://www.uvicorn.org/) |\n",
-    "| Pydantic | Validates request/response models in the FastAPI backend. | [docs.pydantic.dev](https://docs.pydantic.dev/) |\n",
-    "| python-dotenv | Loads environment variables from a `.env` file for local secrets management. | [pypi.org/project/python-dotenv](https://pypi.org/project/python-dotenv/) |\n",
-    "| google-generativeai | Client library for Google Generative AI integrations explored later in the course. | [pypi.org/project/google-generativeai](https://pypi.org/project/google-generativeai/) |\n",
-    "| faiss-cpu | Provides vector similarity search utilities used by the AI features. | [pypi.org/project/faiss-cpu](https://pypi.org/project/faiss-cpu/) |\n",
-    "| numpy | Supports numerical operations required by FAISS and data processing. | [numpy.org](https://numpy.org/install/) |\n",
-    "\n",
-    "Before installing dependencies, change into `ai-web/backend`, create (if needed) and activate the `.venv` virtual environment there, and scaffold the React app inside `ai-web/frontend` so every dependency stays scoped to this project folder.\n",
+    "The container workflow depends on these locally installed tools:\n",
     "\n",
     "```bash\n",
-    "python --version\n",
-    "node --version\n",
-    "npm --version\n",
+    "docker --version\n",
+    "docker compose version\n",
     "git --version\n",
+    "```\n",
     "\n",
-    "# Backend environment preparation (local execution only)\n",
-    "cd ai-web/backend\n",
-    "python -m venv .venv\n",
-    "# Windows: .venv\\Scripts\\activate\n",
-    "# Unix/macOS:\n",
-    ". .venv/bin/activate\n",
-    "pip install fastapi uvicorn[standard] pydantic python-dotenv google-generativeai faiss-cpu numpy\n",
+    "After cloning the repository, build and start the services with Docker Compose:\n",
     "\n",
-    "# Frontend creation (Create React App; no Vite)\n",
-    "cd ../../\n",
-    "npx create-react-app frontend\n",
-    "cd frontend\n",
-    "npm install\n",
+    "```bash\n",
+    "cd ai-web\n",
+    "docker compose build\n",
+    "docker compose up\n",
+    "# Backend → http://localhost:8000\n",
+    "# Frontend → http://localhost:5173\n",
+    "\n",
+    "# Shut the stack down when finished exploring:\n",
+    "docker compose down\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd3bd902",
+   "id": "f32bdc03",
    "metadata": {},
    "source": [
     "## Step-by-step tasks\n",
-    "Each step is executed locally so backend keys remain protected.\n",
+    "Each step configures local source files that the Docker stack will mount so secrets remain outside the built images.\n",
     "\n",
-    "### Step 1: Backend folder layout\n",
-    "A backend folder is created and populated with required files."
+    "### Step 1: Backend folder layout and Dockerfile\n",
+    "A backend folder is created with starter FastAPI files and a Dockerfile that installs dependencies inside the image."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d8d7f59",
+   "id": "960281ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "base = Path(\"ai-web/backend\")\n",
+    "base.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Ensure the application package exists so FastAPI can locate modules.\n",
     "(base / \"app\").mkdir(parents=True, exist_ok=True)\n",
     "(base / \"app\" / \"__init__.py\").write_text(\"\n",
     "\")\n",
+    "\n",
+    "# Provide a sample environment file that documents required secrets.\n",
     "(base / \".env.example\").write_text('# Environment variables (never commit real keys)\n",
     "GEMINI_API_KEY=\n",
     "')\n",
+    "\n",
+    "# List Python dependencies that will be installed within the backend container.\n",
     "(base / \"requirements.txt\").write_text('''fastapi\n",
     "uvicorn[standard]\n",
     "pydantic\n",
@@ -114,6 +103,8 @@
     "faiss-cpu\n",
     "numpy\n",
     "''')\n",
+    "\n",
+    "# Create the FastAPI entrypoint with health and echo routes.\n",
     "(base / \"app\" / \"main.py\").write_text('''from fastapi import FastAPI\n",
     "from fastapi.middleware.cors import CORSMiddleware\n",
     "from pydantic import BaseModel\n",
@@ -140,29 +131,51 @@
     "def echo(payload: EchoIn):\n",
     "    return {\"msg\": payload.msg}\n",
     "''')\n",
-    "print(\"Backend scaffold was written under ai-web/backend.\")"
+    "\n",
+    "# Define a Dockerfile that installs dependencies and starts uvicorn.\n",
+    "(base / \"Dockerfile\").write_text('''FROM python:3.11-slim\n",
+    "\n",
+    "WORKDIR /app\n",
+    "\n",
+    "ENV PYTHONDONTWRITEBYTECODE=1 \\n    PYTHONUNBUFFERED=1\n",
+    "\n",
+    "COPY requirements.txt ./\n",
+    "RUN pip install --no-cache-dir -r requirements.txt\n",
+    "\n",
+    "COPY app ./app\n",
+    "\n",
+    "CMD [\"uvicorn\", \"app.main:app\", \"--host\", \"0.0.0.0\", \"--port\", \"8000\"]\n",
+    "''')\n",
+    "\n",
+    "print(\"Backend scaffold and Dockerfile were written under ai-web/backend.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96e9acfb",
+   "id": "47277266",
    "metadata": {},
    "source": [
-    "### Step 2: Frontend placeholders\n",
-    "Frontend placeholders are positioned so Vite React components (`src/App.jsx`, `src/main.jsx`) can be customized while the generated `vite.config.js` continues to manage dev server defaults."
+    "### Step 2: Frontend placeholders and Dockerfile\n",
+    "Frontend placeholders are positioned so Vite React components (`src/App.jsx`, `src/main.jsx`) can be customized while the generated `vite.config.js` continues to manage dev server defaults. A lightweight Dockerfile installs Node.js dependencies for the Vite dev server."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7a6f30",
+   "id": "425d46e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "src = Path(\"ai-web/frontend/src\")\n",
+    "frontend = Path(\"ai-web/frontend\")\n",
+    "src = frontend / \"src\"\n",
+    "frontend.mkdir(parents=True, exist_ok=True)\n",
+    "src.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Create a lib directory for shared utilities between components.\n",
     "(src / \"lib\").mkdir(parents=True, exist_ok=True)\n",
     "\n",
+    "# Bootstrap a simple API helper with descriptive error handling.\n",
     "(src / \"lib\" / \"api.js\").write_text('''const BASE = import.meta.env.VITE_API_BASE || \"http://localhost:8000\";\n",
     "\n",
     "export async function post(path, body) {\n",
@@ -177,6 +190,8 @@
     "  return res.json();\n",
     "}\n",
     "''')\n",
+    "\n",
+    "# Author a basic demo interface that interacts with the echo endpoint.\n",
     "(src / \"App.jsx\").write_text('''import { useState } from 'react';\n",
     "import { post } from './lib/api';\n",
     "\n",
@@ -213,6 +228,8 @@
     "\n",
     "export default App;\n",
     "''')\n",
+    "\n",
+    "# Mount the App component using Vite's modern entry point.\n",
     "(src / \"main.jsx\").write_text('''import React from 'react';\n",
     "import ReactDOM from 'react-dom/client';\n",
     "import App from './App.jsx';\n",
@@ -223,21 +240,135 @@
     "  </React.StrictMode>,\n",
     ");\n",
     "''')\n",
-    "print(\"Frontend placeholders were written under ai-web/frontend/src.\")"
+    "\n",
+    "# Ensure Vite configuration and HTML entrypoint exist for the dev server.\n",
+    "(frontend / \"vite.config.js\").write_text('''import { defineConfig } from \"vite\";\n",
+    "import react from \"@vitejs/plugin-react\";\n",
+    "\n",
+    "export default defineConfig({\n",
+    "  plugins: [react()],\n",
+    "  server: {\n",
+    "    host: true,\n",
+    "    port: 5173,\n",
+    "  },\n",
+    "});\n",
+    "''')\n",
+    "\n",
+    "(frontend / \"index.html\").write_text('''<!doctype html>\n",
+    "<html lang=\"en\">\n",
+    "  <head>\n",
+    "    <meta charset=\"UTF-8\" />\n",
+    "    <link rel=\"icon\" type=\"image/svg+xml\" href=\"/vite.svg\" />\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />\n",
+    "    <title>Lab 1 Echo Demo</title>\n",
+    "  </head>\n",
+    "  <body>\n",
+    "    <div id=\"root\"></div>\n",
+    "    <script type=\"module\" src=\"/src/main.jsx\"></script>\n",
+    "  </body>\n",
+    "</html>\n",
+    "''')\n",
+    "\n",
+    "# Provide a package.json that mirrors the Vite React starter dependencies.\n",
+    "(frontend / \"package.json\").write_text('''{\n",
+    "  \"name\": \"frontend\",\n",
+    "  \"version\": \"0.0.0\",\n",
+    "  \"private\": true,\n",
+    "  \"type\": \"module\",\n",
+    "  \"scripts\": {\n",
+    "    \"dev\": \"vite\",\n",
+    "    \"build\": \"vite build\",\n",
+    "    \"preview\": \"vite preview --host\"\n",
+    "  },\n",
+    "  \"dependencies\": {\n",
+    "    \"react\": \"^18.3.1\",\n",
+    "    \"react-dom\": \"^18.3.1\"\n",
+    "  },\n",
+    "  \"devDependencies\": {\n",
+    "    \"@vitejs/plugin-react\": \"^4.3.1\",\n",
+    "    \"vite\": \"^5.2.0\"\n",
+    "  }\n",
+    "}\n",
+    "''')\n",
+    "\n",
+    "# Provide a Dockerfile that installs dependencies and runs the Vite dev server.\n",
+    "(frontend / \"Dockerfile\").write_text('''FROM node:20-alpine\n",
+    "\n",
+    "WORKDIR /app\n",
+    "\n",
+    "COPY package*.json ./\n",
+    "RUN npm install\n",
+    "\n",
+    "COPY . .\n",
+    "\n",
+    "CMD [\"npm\", \"run\", \"dev\", \"--\", \"--host\"]\n",
+    "''')\n",
+    "\n",
+    "print(\"Frontend placeholders and Dockerfile were written under ai-web/frontend.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f715c46",
+   "id": "755079dc",
    "metadata": {},
    "source": [
-    "### Step 3: Git initialization\n",
+    "### Step 3: Docker Compose orchestration\n",
+    "A top-level `docker-compose.yml` is created so the backend and frontend can be started together with a single command."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a3b3e9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "compose = Path(\"ai-web/docker-compose.yml\")\n",
+    "compose.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Define services that mount local source for rapid iteration while keeping dependencies inside the containers.\n",
+    "compose.write_text('''version: \"3.9\"\n",
+    "\n",
+    "services:\n",
+    "  backend:\n",
+    "    build: ./backend\n",
+    "    ports:\n",
+    "      - \"8000:8000\"\n",
+    "    environment:\n",
+    "      - GEMINI_API_KEY=${GEMINI_API_KEY:-}\n",
+    "    volumes:\n",
+    "      - ./backend/app:/app/app\n",
+    "      - ./backend/.env.example:/app/.env:ro\n",
+    "\n",
+    "  frontend:\n",
+    "    build: ./frontend\n",
+    "    ports:\n",
+    "      - \"5173:5173\"\n",
+    "    environment:\n",
+    "      - VITE_API_BASE=http://localhost:8000\n",
+    "    volumes:\n",
+    "      - ./frontend/src:/app/src\n",
+    "      - ./frontend/vite.config.js:/app/vite.config.js\n",
+    "      - ./frontend/index.html:/app/index.html\n",
+    "      - ./frontend/package.json:/app/package.json\n",
+    "''')\n",
+    "\n",
+    "print(\"Docker Compose file was written under ai-web/docker-compose.yml.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34571cdc",
+   "metadata": {},
+   "source": [
+    "### Step 4: Git initialization\n",
     "Git is initialized locally so changes can be tracked."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "951fc337",
+   "id": "71c33037",
    "metadata": {},
    "source": [
     "```bash\n",
@@ -250,22 +381,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5e0b4cb",
+   "id": "962acb13",
    "metadata": {},
    "source": [
     "## Validation / acceptance checks\n",
     "```bash\n",
     "# locally\n",
+    "docker compose up -d\n",
     "curl http://localhost:8000/health\n",
     "curl -X POST http://localhost:8000/echo -H 'Content-Type: application/json' -d '{\"msg\":\"hello\"}'\n",
+    "docker compose down\n",
     "```\n",
-    "- HTTP 200 responses include status \"ok\" and the echoed payload.\n",
+    "- HTTP 200 responses include status \"ok\" and the echoed payload while the stack runs in Docker.\n",
     "- React development mode shows the described UI state without console errors."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "197c568a",
+   "id": "4ae78b0b",
    "metadata": {},
    "source": [
     "## Homework / extensions\n",
@@ -274,11 +407,7 @@
    ]
   }
  ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
