--- a/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
+++ b/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
@@ -5,7 +5,7 @@
    "id": "3191ae5d",
    "metadata": {},
    "source": [
-    "# Lab 01 \u00b7 FastAPI, Vite, and Git\n",
+    "# Lab 01 · FastAPI, Vite, and Git\n",
     "\n",
     "*This lab notebook provides guided steps. All commands are intended for local execution.*"
    ]
@@ -87,13 +87,10 @@
     "\n",
     "# Ensure the application package exists so FastAPI can locate modules.\n",
     "(base / \"app\").mkdir(parents=True, exist_ok=True)\n",
-    "(base / \"app\" / \"__init__.py\").write_text(\"\n",
-    "\")\n",
+    "(base / \"app\" / \"__init__.py\").write_text(\"\")\n",
     "\n",
     "# Provide a sample environment file that documents required secrets.\n",
-    "(base / \".env.example\").write_text('# Environment variables (never commit real keys)\n",
-    "GEMINI_API_KEY=\n",
-    "')\n",
+    "(base / \".env.example\").write_text('# Environment variables (never commit real keys)GEMINI_API_KEY=')\n",
     "\n",
     "# List Python dependencies that will be installed within the backend container.\n",
     "(base / \"requirements.txt\").write_text('''fastapi\n",
@@ -217,10 +214,10 @@
     "\n",
     "  return (\n",
     "    <main style={{ padding: 24 }}>\n",
-    "      <h1>Lab 1 \u2014 Echo demo</h1>\n",
+    "      <h1>Lab 1 — Echo demo</h1>\n",
     "      <input value={msg} onChange={(event) => setMsg(event.target.value)} />\n",
     "      <button onClick={handleSend} disabled={loading}>Send</button>\n",
-    "      {loading && <p>Loading\u2026</p>}\n",
+    "      {loading && <p>Loading…</p>}\n",
     "      {error && <p style={{ color: 'red' }}>{error}</p>}\n",
     "      <pre>{response}</pre>\n",
     "    </main>\n",
@@ -408,7 +405,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
