docs: expand fastapi and vite context in labs 1-2

--- a/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
+++ b/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
@@ -5,7 +5,7 @@
    "id": "c6402875",
    "metadata": {},
    "source": [
-    "# Lab 02 · HTTP Forms and Retry\n",
+    "# Lab 02 \u00b7 HTTP Forms and Retry\n",
     "\n",
     "*This lab notebook provides guided steps. All commands are intended for local execution.*"
    ]
@@ -44,6 +44,38 @@
     "cd ai-web/frontend\n",
     "npm install\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FastAPI service context\n",
+    "\n",
+    "The frontend exercises in this lab interact with a FastAPI application structured around routers, request models, and response classes documented in the [FastAPI docs](https://fastapi.tiangolo.com/). Each route wraps an async function that receives validated data\u2014such as prompt text or user metadata\u2014via `Pydantic` models, raising typed `HTTPException`s when validation fails. Dependency-injected services handle downstream AI calls or persistence, while middleware centralizes logging, CORS rules, and auth. The automatic OpenAPI schema and interactive docs remain useful for confirming the exact payload shape your retry helper must send.\n",
+    "\n",
+    "For AI-focused endpoints you will often:\n",
+    "- Separate inference, embedding, and health routes into dedicated router modules.\n",
+    "- Return structured responses that include generation metadata (latency, token counts) so the UI can surface insights.\n",
+    "- Wrap third-party model clients in try/except blocks that translate provider errors into FastAPI `HTTPException`s with informative status codes.\n",
+    "\n",
+    "### Vite-powered React environment refresher\n",
+    "\n",
+    "The React frontend is scaffolded with [Vite](https://vitejs.dev/guide/), giving you fast hot module replacement, first-class TypeScript support, and `import.meta.env` configuration for secrets like AI API keys or backend URLs. React components (see the [React documentation](https://react.dev/)) encapsulate form state, loading indicators, and streaming responses. Utility modules centralize fetch logic\u2014such as the retry helper you extend here\u2014so components stay declarative.\n",
+    "\n",
+    "When layering AI UX patterns consider:\n",
+    "- Co-locating UI state (input text, response history) with hooks that call the backend.\n",
+    "- Surfacing background work (retry attempts, exponential backoff timers) through toasts or progress bars.\n",
+    "- Using Suspense-like fallbacks or skeleton components when streaming responses from long-running AI calls.\n",
+    "\n",
+    "### AI request flow checklist\n",
+    "\n",
+    "1. Define or review the FastAPI router handling the AI request, ensuring request/response models match the expected form fields.\n",
+    "2. Confirm the route's error handling returns consistent status codes and messages that the frontend retry helper can inspect.\n",
+    "3. Expose the backend base URL via `.env` values so Vite can proxy requests locally and bundle the correct production endpoint.\n",
+    "4. Build or update a shared API utility (e.g., `withRetry(fetchAIResponse)`) that reads from `import.meta.env` and emits structured results.\n",
+    "5. Connect React form components to the helper, wiring loading states, disabled buttons, and retries to maintain a responsive AI UX.\n",
+    "6. Test the round trip locally using Vite's dev server with proxying to FastAPI before moving to containerized builds.\n"
    ]
   },
   {
@@ -121,7 +153,7 @@
     ");\n",
     "```\n",
     "\n",
-    "The first two requests return HTTP 503 errors, the third succeeds, and the UI recovers gracefully. Wrap longer-lived retry sequences in loading spinners, keep buttons disabled until the promise settles, and consider error boundaries to catch truly fatal issues. These guardrails help the codebase grow while staying aligned with the lab’s resilient frontend architecture."
+    "The first two requests return HTTP 503 errors, the third succeeds, and the UI recovers gracefully. Wrap longer-lived retry sequences in loading spinners, keep buttons disabled until the promise settles, and consider error boundaries to catch truly fatal issues. These guardrails help the codebase grow while staying aligned with the lab\u2019s resilient frontend architecture."
    ]
   },
   {
