docs: deepen fastapi and vite primers

--- a/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
+++ b/ai-web/labs/Lab01_FastAPI_Vite_and_Git.ipynb
@@ -35,6 +35,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ce3bdc5",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### FastAPI framework primer\n",
+    "\n",
+    "**FastAPI in a nutshell.** [FastAPI](https://fastapi.tiangolo.com/) is an asynchronous Python web framework that automatically maps HTTP paths to Python callables called *path operations*. Typed request and response models built with [Pydantic](https://docs.pydantic.dev/) provide validation, while async support keeps expensive AI inference calls from blocking the event loop.\n",
+    "\n",
+    "#### Core building blocks\n",
+    "1. **Application entry point** — Create a `FastAPI()` instance in `app/main.py` and register startup/shutdown handlers to open or close model clients. [Docs: First Steps](https://fastapi.tiangolo.com/tutorial/first-steps/)\n",
+    "2. **Routers and path operations** — Organize endpoints in `routers/` modules with `APIRouter` to keep chat, embeddings, and admin surfaces separate. Mount each router in `main.py` to expose `/api/chat`, `/api/embeddings`, etc. [Docs: APIRouter](https://fastapi.tiangolo.com/tutorial/bigger-applications/)\n",
+    "3. **Pydantic models** — Declare request/response schemas in `schemas.py` so prompts, system messages, and model options are validated before invoking inference. [Docs: Request Body](https://fastapi.tiangolo.com/tutorial/body/)\n",
+    "4. **Dependency injection** — Use `Depends` to pass shared services (OpenAI client, vector store, cache) into route functions without manually instantiating them. This keeps AI integrations testable and configurable. [Docs: Dependencies](https://fastapi.tiangolo.com/tutorial/dependencies/)\n",
+    "5. **Background tasks** — Offload long-running work such as audit logging, metrics collection, or follow-up summarization via `BackgroundTasks`. Students can immediately see how to chain AI workflows beyond the initial response. [Docs: Background Tasks](https://fastapi.tiangolo.com/tutorial/background-tasks/)\n",
+    "6. **Interactive OpenAPI docs** — FastAPI generates `/docs` and `/redoc` from your type hints, letting you verify model contracts, stream responses, and share live documentation with teammates. [Docs: Interactive API docs](https://fastapi.tiangolo.com/features/#interactive-api-docs)\n",
+    "\n",
+    "#### Tooling and project layout for AI routes\n",
+    "- **Local server:** Run `uvicorn app.main:app --reload` for fast feedback while editing routers or schemas. Enable hot reload so AI inference tweaks are visible immediately. [Docs: Uvicorn](https://fastapi.tiangolo.com/deployment/uvicorn/)\n",
+    "- **Environment management:** Load `.env` files with `python-dotenv` or FastAPI settings management to inject API keys, base URLs, and model IDs without hardcoding secrets.\n",
+    "- **Folder structure:** Start with `app/main.py`, `app/routers/`, `app/schemas.py`, and `app/services/ai.py`. Keep retry utilities, tracing helpers, and vector database adapters in `services/` so routes remain thin controllers.\n",
+    "- **Testing hooks:** Leverage FastAPI's `TestClient` to write unit tests that mock AI providers and confirm each router handles success, errors, and streaming payloads.\n",
+    "\n",
+    "### Vite + React framework primer\n",
+    "\n",
+    "#### Why Vite for React AI UIs\n",
+    "The frontend labs rely on [Vite](https://vitejs.dev/guide/) to scaffold a React UI with lightning-fast hot module replacement, native ES module bundling, and first-class TypeScript. CLI commands such as `npm create vite@latest`, `npm install`, `npm run dev`, and `npm run build` (or their `pnpm`/`yarn` equivalents) keep iteration tight while preparing optimized builds for deployment.\n",
+    "\n",
+    "#### Core tooling and project conventions\n",
+    "- **Dev server workflow:** `npm run dev` launches a Vite server that can [proxy](https://vitejs.dev/config/server-options.html#server-proxy) `/api` calls to FastAPI, eliminating CORS friction while you develop AI features.\n",
+    "- **Environment variables:** Prefix keys with `VITE_` (e.g., `VITE_API_BASE_URL`, `VITE_OPENAI_MODEL`) so they are exposed via `import.meta.env`. Use separate `.env.local` files for experimental model toggles.\n",
+    "- **Module organization:** Mirror backend routers with feature folders like `src/features/chat/`, `src/features/embeddings/`, and keep shared helpers under `src/lib/` (`apiClient.js`, `retry.js`, `streamParser.js`).\n",
+    "- **React hooks and state:** Follow the [React documentation](https://react.dev/learn) to combine `useState`, `useEffect`, and custom hooks that orchestrate fetch lifecycles. Patterns such as `useReducer` for complex prompt builders or `useRef` for streaming buffers keep AI UIs maintainable.\n",
+    "- **UI composition:** Component libraries (Mantine, Chakra) or design systems can slot into `src/components/` for reusable chat bubbles, token counters, and loading spinners.\n",
+    "\n",
+    "#### Mini walkthrough: bootstrapping the AI stack\n",
+    "1. **Scaffold FastAPI** with `python -m venv .venv && pip install fastapi uvicorn` and create `app/main.py` that instantiates the app, registers routers, and mounts static files if needed.\n",
+    "2. **Add routers and schemas** under `app/routers/inference.py` with `Pydantic` models describing your prompt payloads and inference responses.\n",
+    "3. **Wire dependencies** like model clients via `Depends`, storing credentials in `.env` and loading them with a settings class.\n",
+    "4. **Run `uvicorn app.main:app --reload`** to expose `/docs`, test path operations, and confirm background tasks fire during inference.\n",
+    "5. **Create the Vite React frontend** with `npm create vite@latest frontend -- --template react` and install UI dependencies that render form controls and streaming areas.\n",
+    "6. **Configure Vite proxy and envs** in `vite.config.js` and `.env.local` so `fetch` helpers in `src/lib/apiClient.js` point to FastAPI during development.\n",
+    "7. **Implement React hooks and components** (e.g., `useInference` in `src/features/chat/useInference.js`) that call the backend, manage retries, and render streaming updates.\n",
+    "8. **Iterate locally** by running `uvicorn` and `npm run dev` together, validating requests through the autogenerated FastAPI docs and the Vite dev tools before containerization or deployment.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6af0bd1f",
    "metadata": {},
    "source": [
@@ -362,6 +409,23 @@
    "source": [
     "### Step 4: Git initialization\n",
     "Git is initialized locally so changes can be tracked."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1022dda",
+   "metadata": {},
+   "source": [
+    "### FastAPI ↔ Vite AI workflow checklist\n",
+    "\n",
+    "1. Scaffold FastAPI with a dedicated router for AI inference (e.g., `routers/inference.py`) and register it in `main.py`.\n",
+    "2. Define `Pydantic` models for request payloads (prompt text, model options) and responses (structured outputs, tokens, metadata).\n",
+    "3. Configure dependency-injected clients for external AI providers, loading keys from `.env` files via `python-dotenv` or container secrets.\n",
+    "4. Enable CORS middleware and document the route via FastAPI's autogenerated docs to confirm payload contracts.\n",
+    "5. In Vite, create API utility modules that read backend URLs from `import.meta.env` and call the FastAPI endpoints.\n",
+    "6. Build React components that manage prompt forms, loading indicators, streaming updates, and error toasts tied to those utilities.\n",
+    "7. Use Vite's dev server proxy to forward `/api` requests to FastAPI for local iteration, then validate the flow through Docker Compose.\n",
+    "8. Update production Dockerfiles or CI pipelines so backend and frontend environments receive the same `.env` configuration for AI model credentials.\n"
    ]
   },
   {
