Refactor lab scaffolding into commented markdown

--- a/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
+++ b/ai-web/labs/Lab02_HTTP_Forms_and_Retry.ipynb
@@ -87,7 +87,7 @@
     "- Compose UI primitives in `src/components/` for buttons, toasts, and skeleton loaders so each AI workflow shares consistent feedback.\n",
     "- Track experiment flags (e.g., \"use streaming\", \"call fallback model\") with context providers or state libraries (Zustand, Redux Toolkit) when the app grows.\n",
     "\n",
-    "#### Backend ↔ frontend toolchain overview\n",
+    "#### Backend \u2194 frontend toolchain overview\n",
     "| Layer | Key tool | Purpose for this lab |\n",
     "| --- | --- | --- |\n",
     "| Backend runtime | FastAPI + Uvicorn | Serves async echo routes, enforces validation, exposes OpenAPI docs |\n",
@@ -102,7 +102,6 @@
     "4. **Create or update the shared API utility**: in `src/lib/apiClient.js`, read `import.meta.env.VITE_API_BASE_URL`, attach headers, and export helpers consumed by `withRetry`.\n",
     "5. **Wire React forms to the helper**: in `src/App.jsx`, collect input, call `withRetry`, and map resolved data into component state while disabling submit buttons during attempts.\n",
     "6. **Iterate locally, then containerize**: run `uvicorn app.main:app --reload` alongside `npm run dev` to test the full round trip. Once stable, bake the same env vars into Docker or deployment pipelines for parity.\n"
-
    ]
   },
   {
@@ -116,29 +115,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "530801d0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "lib = Path(\"ai-web/frontend/src/lib\")\n",
-    "lib.mkdir(parents=True, exist_ok=True)\n",
-    "(lib / \"retry.js\").write_text('''export async function withRetry(fn, attempts = 2, delayMs = 400) {\n",
-    "  let lastError;\n",
-    "  for (let attempt = 0; attempt <= attempts; attempt += 1) {\n",
+    "### Step 1: Add a reusable retry helper\n",
+    "\n",
+    "Instead of executing a cell that writes the file for you, manually create `ai-web/frontend/src/lib/retry.js` and paste the commented implementation below. Read each line so you understand how the retry logic works before moving on.\n",
+    "\n",
+    "```javascript\n",
+    "export async function withRetry(fn, attempts = 2, delayMs = 400) { // Export a helper that re-runs a promise-returning function when it fails.\n",
+    "  let lastError; // Keep track of the last error so we can throw it if all retries are exhausted.\n",
+    "  for (let attempt = 0; attempt <= attempts; attempt += 1) { // Iterate from the initial try through the configured number of retries.\n",
     "    try {\n",
-    "      return await fn();\n",
+    "      return await fn(); // If the function succeeds, immediately return its resolved value.\n",
     "    } catch (error) {\n",
-    "      lastError = error;\n",
+    "      lastError = error; // Remember the error and keep looping to try again.\n",
     "    }\n",
-    "    await new Promise((resolve) => setTimeout(resolve, delayMs));\n",
+    "    await new Promise((resolve) => setTimeout(resolve, delayMs)); // Wait the requested delay before attempting again.\n",
     "  }\n",
-    "  throw lastError;\n",
+    "  throw lastError; // After all attempts fail, throw the final error so the caller can react.\n",
     "}\n",
-    "''')\n",
-    "print(\"Retry helper was written.\")"
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -192,39 +191,77 @@
     ");\n",
     "```\n",
     "\n",
-    "The first two requests return HTTP 503 errors, the third succeeds, and the UI recovers gracefully. Wrap longer-lived retry sequences in loading spinners, keep buttons disabled until the promise settles, and consider error boundaries to catch truly fatal issues. These guardrails help the codebase grow while staying aligned with the lab’s resilient frontend architecture.\n",
+    "The first two requests return HTTP 503 errors, the third succeeds, and the UI recovers gracefully. Wrap longer-lived retry sequences in loading spinners, keep buttons disabled until the promise settles, and consider error boundaries to catch truly fatal issues. These guardrails help the codebase grow while staying aligned with the lab\u2019s resilient frontend architecture.\n",
     "\n",
     "These commented snippets mirror the updates you will apply to `src/App.jsx` (and related hooks) so learners can translate the notebook guidance directly into the working project files.\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "59c4d585",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "app_js = Path(\"ai-web/frontend/src/App.jsx\")\n",
-    "text = app_js.read_text()\n",
-    "if \"withRetry\" not in text:\n",
-    "    text = text.replace(\n",
-    "        \"import { post } from './lib/api';\",\n",
-    "        \"import { post } from './lib/api';\n",
-    "import { withRetry } from './lib/retry';\",\n",
-    "    )\n",
-    "if \"withRetry\" in text and \"withRetry(() => post\" not in text:\n",
-    "    text = text.replace(\n",
-    "        \"const json = await post('/echo', { msg });\",\n",
-    "        \"const json = await withRetry(() => post('/echo', { msg }), 2, 500);\",\n",
-    "    )\n",
-    "if \"setError(String(err));\" in text:\n",
-    "    text = text.replace(\n",
-    "        \"setError(String(err));\",\n",
-    "        \"setError('A temporary issue was encountered. Please try again.');\",\n",
-    "    )\n",
-    "app_js.write_text(text)\n",
-    "print(\"App.jsx was adjusted for retry and friendly errors.\")"
+    "### Step 2: Update `App.jsx` to use the retry helper and friendlier messaging\n",
+    "\n",
+    "Open `ai-web/frontend/src/App.jsx` in your editor and replace its contents with the fully annotated component shown below. This version imports the retry helper, wraps the network request, and surfaces a user-friendly error if all retries fail.\n",
+    "\n",
+    "```jsx\n",
+    "import { useState } from 'react'; // Pull in React's state hook to manage component data.\n",
+    "import { post } from './lib/api'; // Import the API helper that wraps fetch for POST requests.\n",
+    "import { withRetry } from './lib/retry'; // Bring in the retry utility you created in Step 1.\n",
+    "\n",
+    "function App() { // Declare the main application component rendered by Vite.\n",
+    "  const [msg, setMsg] = useState('hello'); // Track the message that the user wants to send to the backend.\n",
+    "  const [response, setResponse] = useState(''); // Store the echoed response returned by the API.\n",
+    "  const [loading, setLoading] = useState(false); // Represent whether a request is in progress so the UI can disable controls.\n",
+    "  const [error, setError] = useState(''); // Hold a user-facing error message if all retries fail.\n",
+    "\n",
+    "  async function handleSend(event) { // Handle the form submission so we can prevent the default browser behavior.\n",
+    "    event.preventDefault(); // Stop the browser from refreshing the page when the form is submitted.\n",
+    "    setLoading(true); // Show the loading state while the request is running.\n",
+    "    setError(''); // Clear any previous error message before retrying.\n",
+    "    setResponse(''); // Reset the prior response so stale data is not displayed.\n",
+    "    try {\n",
+    "      const json = await withRetry(() => post('/echo', { msg }), 2, 500); // Attempt the POST request with up to two retries and a 500 ms delay.\n",
+    "      setResponse(json.msg); // Store the echoed message if the request eventually succeeds.\n",
+    "    } catch (err) {\n",
+    "      setError('A temporary issue was encountered. Please try again.'); // Present a friendly message if every retry fails.\n",
+    "    } finally {\n",
+    "      setLoading(false); // Stop the loading indicator regardless of success or failure.\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  return (\n",
+    "    <main style={{ padding: 24 }}> {/* Provide basic padding so the layout has breathing room. */}\n",
+    "      <h1>Lab 2 \u2014 Echo with retries</h1> {/* Update the heading to reflect the new behavior in this lab. */}\n",
+    "      <form onSubmit={handleSend} style={{ display: 'grid', gap: 12, maxWidth: 360 }}> {/* Use a simple grid layout for the form controls. */}\n",
+    "        <label htmlFor=\"msg\"> {/* Associate the label with the text input for accessibility. */}\n",
+    "          Message to echo\n",
+    "        </label>\n",
+    "        <input\n",
+    "          id=\"msg\"\n",
+    "          value={msg}\n",
+    "          onChange={(event) => setMsg(event.target.value)}\n",
+    "          disabled={loading}\n",
+    "        /> {/* Bind the input to component state so the typed message is tracked. */}\n",
+    "        <button type=\"submit\" disabled={loading}> {/* Submit the form and disable the button when loading. */}\n",
+    "          {loading ? 'Sending\u2026' : 'Send'} {/* Swap button text based on the loading state. */}\n",
+    "        </button>\n",
+    "      </form>\n",
+    "      {error && <p style={{ color: 'red' }}>{error}</p>} {/* Show a user-friendly error when retries fail. */}\n",
+    "      {response && (\n",
+    "        <section>\n",
+    "          <h2>Server response</h2>\n",
+    "          <pre>{response}</pre>\n",
+    "        </section>\n",
+    "      )} {/* Render the echoed message with a subheading when available. */}\n",
+    "    </main>\n",
+    "  );\n",
+    "}\n",
+    "\n",
+    "export default App; // Export the component so main.jsx can render it.\n",
+    "```\n",
+    "\n"
    ]
   },
   {
